# smart_clock

./: CMakeLists.txt
main/: CMakeLists.txt  button.c  button.h  buzzer.c  buzzer.h  dht_sensor.c  dht_sensor.h  display.c  display.h  main.c  time.c  time_svc.c  time_svc.h  wifi.c  wifi.h
