idf_component_register(
    SRCS
        "main.c"
        "wifi.c"
        "time_svc.c"
        "display.c"
        "button.c"
        "buzzer.c"
        "dht_sensor.c"
    INCLUDE_DIRS
        "."
    REQUIRES
        freertos
        esp_wifi
        esp_netif
        nvs_flash
        driver
        max7219
        dht
)
